Fixed Trello popup screen overflow

--- a/src/button/styles/popup.less
+++ b/src/button/styles/popup.less
@@ -2,7 +2,7 @@
 
 .popup {
   position: relative;
-  left: 40px; top: -15px;
+  top: -15px;
   width: 400px;
 
   background-color: white;
@@ -10,11 +10,19 @@
   font-family: 'Teamweek Button Avenir Next';
 }
 
+.popup--right {
+  left: 40px;
+}
+
+.popup--left {
+  right: 40px;
+}
+
 .popup:after {
   content: "";
   display: block;
   position: absolute;
-  left: -10px; top: 17px;
+  top: 17px;
   z-index: 0;
   width: 20px;
   height: 20px;
@@ -22,6 +30,14 @@
   background-color: white;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
   transform: rotate(45deg);
+}
+
+.popup--right:after {
+  left: -10px;
+}
+
+.popup--left:after {
+  right: -10px;
 }
 
 .popup__title {
